# msvc-wine

./: Dockerfile  Dockerfile.clang  Dockerfile.cmake  Dockerfile.dav1d  Dockerfile.ffmpeg  Dockerfile.hello  README.md  cross-msvc-arm.txt  cross-msvc-arm64.txt  cross-msvc-i686.txt  cross-msvc-x86_64.txt  fixinclude  fixinclude.py  hello.c  install.py  install.sh  lowercase  lowercase.py  make_symlinks.sh  msvcenv-native.sh  msvcenv.sh  msvctricks.cpp  replacevars.py  run_exe.sh  vsdownload.py  wdk-download.sh
.github/workflows/: build.yml  projects.yml
cmake/: msvc-wine_toolchainfile.cmake.in  msvc-wine_toolchainfile_arch.cmake.in
patches/Common7/Tools/: VsDevCmd.bat.patch
patches/Common7/Tools/vsdevcmd/core/: vsdevcmd_start.bat.patch  winsdk.bat.patch
patches/Common7/Tools/vsdevcmd/ext/: ConnectionManagerExe.bat.patch  cmake.bat.patch
src/msvc_wine_py/: install.py
test/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.vcxproj  headers.cpp  hello.c  hello.cpp  hello.rc  meson.build  test-asm.sh  test-cl.sh  test-clang-cl-cmds.sh  test-clang-cl.sh  test-cmake-clang-cl.sh  test-cmake.sh  test-dumpbin.sh  test-mc.sh  test-meson.sh  test-midl.sh  test-msbuild.ps1  test-msbuild.sh  test-mt.sh  test-vcpkg.ps1  test-vcpkg.sh  test-vcvars.ps1  test-vcvars.sh  test-vsdownload.sh  test-wdk-msbuild.sh  test.bat  test.ps1  test.sh  utf8.manifest
test/wdk/: test.c  test.inx  test.vcxproj
wrappers/: armasm  armasm64  cl  cmd  dumpbin  findstr  lib  link  mc  midl  ml  ml64  msbuild  msvcenv.sh  mt  nmake  rc  wine-msvc.bat  wine-msvc.sh
(+4 files in other folders)
